--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 
     <body>
         <div class="container">
-            <h1 class="mb-4">Add Book</h1>
+            <h1 class="my-4">Add Book</h1>
             <form id="book-form">
                 <div class="form-group">
                     <label for="title">Book Title</label>
