finished JS functionality

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
                     <tr>
                         <th scope="col">Title</th>
                         <th scope="col">Author</th>
-                        <th scope="col">ISNB</th>
+                        <th scope="col">ISBN</th>
                         <th scope="col"></th>
                     </tr>
                 </thead>
