--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,6 @@
         <script src="js/popper.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/scrollreveal.min.js"></script>
-        <script src="js/app.js"></script>
+        <script src="js/appes6.js"></script>
     </body>
 </html>
